# Malachite

./: .gitignor  CMakeLists.txt  main.cpp
scr/app/: app.cpp  app.h
scr/app/tab/: tab.cpp  tab.h
scr/parser/: parser.cpp  parser.h
scr/text/: CustomTextEdit.h
